[INJIWEB-1541] return walletName in response in create and get wallets api
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>